Feat: Minor improvements

--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/Category.cshtml
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/Category.cshtml
@@ -126,7 +126,7 @@
 </section>
 
 
-@await Html.PartialAsync("_CategoryModals", new Transaction())
+@await Html.PartialAsync("_TransactionModals", new Transaction())
 
 @section Scripts {
     @{
