Feat: Implement webpack bundeling

--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Shared/_Layout.cshtml
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Shared/_Layout.cshtml
@@ -5,9 +5,16 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - MVC.Budget.K_MYR</title>
+    <script>
+        window.userLocale = new Intl.Locale('@System.Globalization.CultureInfo.CurrentCulture.Name');
+        window.userNumberFormat = new Intl.NumberFormat('@System.Globalization.CultureInfo.CurrentCulture.Name', { style: 'currency', currency: "EUR" });
+    </script>
+    <script src="~/dist/site.entry.js" defer></script>    
+    @*
     <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/lib/node_modules/country-select-js/build/css/countrySelect.css" asp-append-version="true">
     @await RenderSectionAsync("Stylesheets", required: false)
+    *@
 
 </head>
 <body>
@@ -130,10 +137,12 @@
             @RenderBody()
         </main>
     </div>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+
+    @*<script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/lib/node_modules/country-select-js/build/js/countrySelect.min.js"></script>
-    @await RenderSectionAsync("Scripts", required: false)
+    @await RenderSectionAsync("Scripts", required: false)*@
+    
 
 </body>
 </html>
