--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/ClientApp/src/scss/site.scss
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/ClientApp/src/scss/site.scss
@@ -47,11 +47,11 @@ body {
 }
 
 ::-webkit-scrollbar-track {
-    background: transparent;
+    background: inherit;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: #456977;
+    background: white;
     border-radius: 5px;
 }
 
@@ -73,7 +73,10 @@ body {
 //Navbar
 
 .navbar {
-    background: linear-gradient(45deg, #CCFBE5, #A2D6CB, #7EB1B1, #608C94, #456977);
+    background-image: linear-gradient(45deg, #CCFBE5, #A2D6CB, #7EB1B1, #608C94, #456977);
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
     position: fixed;
     width: 100%;
     top: 0px;
@@ -254,23 +257,27 @@ body {
 // Main Container
 
 .main-container {
-    padding-top: 57px;
     height: 100vh;
-    width: 100vw;
+    width: 100vw;    
+}
+
+.main-container::before {
+    content: "";
+    display:block;
+    height: 56px;
 }
 
 main {
     width: 100%;
-    height: 100%;
+    height: calc(100% - 56px);
 }
 
 // Flip Container
 
 .flip-container {
-    background-color: transparent;
-    margin-top: 10px;
-    height: 100%;
+    height: calc(100% - 20px);
     width: 100%;
+    margin: 10px 0;   
 }
 
 .flip-container-inner {
@@ -278,54 +285,41 @@ main {
     height: 100%;
     width: 100%;
     transition: transform 1s;
-    transform-style: preserve-3d;
+    transform-style: preserve-3d;    
 }
 
 .flip-content {
     position: absolute;
     top: 0;
     left: 0;
+    padding: 10px 0;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
-    height: calc(100vh - 67px);
+    height: 100%;
     width: 100%;
     transform: rotateY(calc(90deg * var(--s))) translateZ(calc(50cqw));
-}
-
-#statistics-scrollcontainer::before, #home-scrollcontainer::before, #reevalCategories-scrollcontainer::before, #search-scrollcontainer::before {
-    content: "";
-    left: -5px;
-    display: block;
-    height: 10px;
-    width: calc(100% - 5px);
-    position: absolute;
-    background: linear-gradient(0deg, rgba(2,4,3,0.05), 40%, rgba(2,4,3,1));
-    z-index: 100;
-}
-
-#statistics-scrollcontainer::after, #home-scrollcontainer::after, #reevalCategories-scrollcontainer::after, #search-scrollcontainer::after {
-    content: "";
-    left: -5px;
-    bottom: 10px;
-    display: block;
-    height: 10px;
-    width: calc(100% - 5px);
-    position: absolute;
-    background: linear-gradient(180deg, rgba(2,4,3,0.05), 40%, rgba(2,4,3,1));
-    z-index: 100;
+    background-image: linear-gradient(45deg, #CCFBE5, #A2D6CB, #7EB1B1, #608C94, #456977);
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
 }
 
 // Home
 
 #home {
-    height: calc(100% - 10px);
-    overflow: hidden;
+    height: 100%;
+    overflow: hidden;    
 }
 
 #home-scrollcontainer {
     height: 100%;
     margin: 0 5px 0 15px;
     overflow-y: scroll;
+    mask: linear-gradient(0deg, transparent 0%, black 15px), linear-gradient(180deg, transparent 0%, transparent 15px);
+    mask: linear-gradient(180deg, transparent 0%, black 15px, black calc(100% - 15px), transparent 100%), linear-gradient(270deg, black 10px, transparent 10px);
+    mask-position: center;
+    mask-repeat: no-repeat;
+    mask-composite: add;
 }
 
 #home-container {
