--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/ClientApp/src/scss/site.scss
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/ClientApp/src/scss/site.scss
@@ -275,9 +275,8 @@ main {
 // Flip Container
 
 .flip-container {
-    height: calc(100% - 20px);
+    height: 100%;
     width: 100%;
-    margin: 10px 0;   
 }
 
 .flip-container-inner {
@@ -291,8 +290,7 @@ main {
 .flip-content {
     position: absolute;
     top: 0;
-    left: 0;
-    padding: 10px 0;
+    left: 0;    
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
     height: 100%;
