--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/Index.cshtml
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/Index.cshtml
@@ -20,13 +20,7 @@
 
     var overspending = expensesPerCategory.Sum(c => Math.Max(0, c.sumOfTransactions - c.category.Budget));
 }
-@*
-@section Stylesheets {
-    @{
-        <link rel="stylesheet" href="~/lib/node_modules/datatables.net-bs5/css/dataTables.bootstrap5.css" asp-append-version="true">
-    }
-}
-*@
+
 <section>
     <div id="menu-container" data-category="0">
         <div id="menu" class="menu">
@@ -53,9 +47,9 @@
 <div class="flip-container">
     <div id="flip-container-inner" class="flip-container-inner">
         <div class="flip-content" style="--s:0">
-            <div id="home">
-                <div id="home-scrollcontainer">
-                    <div id="home-container">
+            <div id="home" class="content-outer-container">
+                <div id="home-scrollcontainer" class="content-scrollcontainer">
+                    <div id="home-container" class="content-container">
                         <div class="dashboard">
                             <div class="dashboard-container">
                                 <div class="chart-container">
@@ -65,9 +59,12 @@
                                 </div>
                                 <div class="chart-container">
                                     <h1 class="text-center">My Budget</h1>
-                                    <h4 class="text-center">@DateTime.UtcNow.ToString("MMMM yyyy", Model.Culture)</h4>
+                                    <div class="input-group monthPicker">
+                                        <input id="home-monthSelector" type="text" class="monthSelector form-control ms-auto" value="" readonly>
+                                        <span class="input-group-text me-auto calendar-button"><i class="bi bi-calendar"></i></span>
+                                    </div>
                                     <div class="dashboardStatistics mt-4">
-                                        <h5 class="text-center">Overspending: @overspending.ToString("C2", Model.Culture) </h5>
+                                        <h5 id="home-overspending" class="text-center">Overspending: @overspending.ToString("C2", Model.Culture) </h5>
                                     </div>
                                 </div>
                                 <div class="chart-container">
@@ -83,7 +80,7 @@
                                     <h5 class="accordion-header me-auto" id="accordionIncomeHeader">
                                         Income
                                     </h5>
-                                    <h5 class="accordion-header">
+                                    <h5 id="incomeBalanceHeader" class="accordion-header">
                                         @incomeTotal.ToString("C2", Model.Culture) / @incomeBudget.ToString("C2", Model.Culture)
                                     </h5>
                                     <svg class="add-icon" fill="none" viewBox="0 0 14 14" height="23" width="23">
@@ -101,7 +98,7 @@
                                     <div class="accordion-caret rotate"></div>
                                 </div>
                                 <div id="collapseIncome" class="accordion-collapse collapse show" aria-labelledby="accordionIncomeHeader">
-                                    <div class="accordion-body">
+                                    <div id="incomeAccordionBody" class="accordion-body">
                                         @foreach (var category in Model.PageModel.Income)
                                         {
                                             var spent = @category.Transactions.Sum(t => t.Amount);
@@ -137,7 +134,7 @@
                                     <h5 class="accordion-header me-auto" id="accordionExpensesHeader">
                                         Expenses
                                     </h5>
-                                    <h5 class="accordion-header">
+                                    <h5 id="expensesBalanceHeader" class="accordion-header">
                                         @expensesTotal.ToString("C2", Model.Culture) / @expensesBudget.ToString("C2", Model.Culture)
                                     </h5>
                                     <svg class="add-icon" fill="none" viewBox="0 0 14 14" height="23" width="23">
@@ -155,7 +152,7 @@
                                     <div class="accordion-caret rotate"></div>
                                 </div>
                                 <div id="collapseExpenses" class="accordion-collapse collapse show" aria-labelledby="accordionExpensesHeader">
-                                    <div class="accordion-body">
+                                    <div id="expensesAccordionBody" class="accordion-body">
                                         @foreach (var group in expensesPerCategory)
                                         {
                                             var progressbarWidth = Math.Min(100, group.sumOfTransactions / group.category.Budget * 100);
@@ -331,12 +328,12 @@
             </div>
         </div>
         <div class="flip-content" style="--s:1">
-            <div id="reevaluation">
+            <div id="reevaluation" class="content-outer-container">
                 <div id="reevalInfo">
                     <h2 id="reevalInfoText">You have reevaluated all of your previous expenses. Good job!</h2>
                 </div>
-                <div id="reevalCategories-scrollcontainer">
-                    <div id="reevalCategories-container">
+                <div id="reevalCategories-scrollcontainer" class="content-scrollcontainer">
+                    <div id="reevalCategories-container" class="content-container">
                         @*<div class="accordion my-2">
                         <div class="accordion-item">
                         <div id="accordion-head-reevalCategory" class="accordion-head d-flex">
@@ -525,9 +522,9 @@
             </div>
         </div>
         <div class="flip-content" style="--s:2">
-            <div id="statistics" class="statistics">
-                <div id="statistics-scrollcontainer">
-                    <div id="statistics-container">
+            <div id="statistics" class="content-outer-container">
+                <div id="statistics-scrollcontainer" class="content-scrollcontainer">
+                    <div id="statistics-container" class="content-container">
                         <div class="dashboard">
                             <div class="dashboard-container">
                                 <div class="chart-container">
@@ -537,7 +534,7 @@
                                 <div class="chart-container">
                                     <h1 class="text-center">My Budget</h1>
                                     <div class="input-group yearPicker">
-                                        <input id="statistics-yearSelector" type="text" class="yearSelector form-control ms-auto" value="@DateTime.UtcNow.Year" readonly>
+                                        <input id="statistics-yearSelector" type="text" class="yearSelector form-control ms-auto" value="" readonly>
                                         <span class="input-group-text me-auto calendar-button"><i class="bi bi-calendar"></i></span>
                                     </div>
                                     <div class="dashboardStatistics mt-4">
@@ -575,9 +572,9 @@
             </div>
         </div>
         <div class="flip-content" style="--s:3">
-            <div id="search">
-                <div id="search-scrollcontainer">
-                    <div id="search-container">
+            <div id="search" class="content-outer-container">
+                <div id="search-scrollcontainer" class="content-scrollcontainer">
+                    <div id="search-container" class="content-container">
                         <div class="filter-container">
                             @await Html.PartialAsync("_SearchForm", Model.PageModel.Search)
                         </div>
@@ -615,15 +612,8 @@
 @await Html.PartialAsync("_CategoryModals", Model.PageModel.Category)
 @await Html.PartialAsync("_TransactionModals", Model.PageModel.Transaction)
 
-@*
 @section Scripts {
-    @{
-        <script src="~/lib/node_modules/chart.js/dist/chart.umd.js"></script>
-        <script src="~/lib/node_modules/ion-rangeslider/js/ion.rangeSlider.min.js"></script>
-        <script src="~/lib/node_modules/datatables.net/js/dataTables.min.js"></script>
-        <script src="~/lib/node_modules/datatables.net-bs5/js/dataTables.bootstrap5.min.js"></script>
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-        <script src="~/js/index.js" asp-append-version="true"></script>
+    @{        
+        <script src="~/dist/site.entry.js" asp-append-version="true"></script>
     }
 }
-*@
