--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/ClientApp/src/scss/site.scss
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/ClientApp/src/scss/site.scss
@@ -99,6 +99,7 @@ body {
     background-image: linear-gradient(45deg, #CCFBE5, #A2D6CB, #7EB1B1, #608C94, #456977);
     background-size: cover;
     background-position: center;
+    background-attachment: fixed;
     width: 100%;
 }
 
@@ -331,7 +332,7 @@ main {
 }
 
 .content-container {
-    margin: 10px 10px 10px 5px;
+    margin: 15px 10px 15px 5px;
 }
 
 // Home
@@ -697,6 +698,37 @@ main {
     background-position: center;
     background-attachment: fixed;
 }
+
+.cards-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+    margin-top: 5px;
+}
+
+.budget-card {
+    background-color: $secondary;
+    padding: 15px;
+    height: 200px;
+    border-radius: var(--bs-border-radius);
+}
+
+.add-budget-card {
+    background-color: transparent;
+    padding: 20px;
+    height: 200px;
+    border-radius: var(--bs-border-radius);
+    border: 4px solid $secondary;
+    cursor: pointer;
+}
+
+.add-budget-card svg {
+    fill: $secondary;
+    flex-grow: 0;
+    height: 100%;
+    width: 100%;
+}
+
 // Transaction (Details)
 
 .transaction-date {
