--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Shared/_Layout.cshtml
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Shared/_Layout.cshtml
@@ -119,7 +119,7 @@
                 </svg>
             </div>
             <div class="sidebar-button-container" data-index="3">
-                <svg id="search-button" fill="#000000" version="1.1"
+                <svg id="search-button" fill="transparent" version="1.1"
                     width="45px" height="45px" viewBox="0 0 24 24">
                     <path d="M11 6C13.7614 6 16 8.23858 16 11M16.6588 16.6549L21 21M19 11C19 15.4183 15.4183 19 11 19C6.58172 19 3 15.4183 3 11C3 6.58172 6.58172 3 11 3C15.4183 3 19 6.58172 19 11Z" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                 </svg>
